--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:name=".HomeSecurityApplication"
         android:allowBackup="true"
@@ -27,6 +30,13 @@
         <activity android:name=".ui.login.LoginActivity"/>
 
         <activity android:name=".ui.main.MainActivity"/>
+
+        <meta-data
+            android:name="com.appliedrec.verid.password"
+            android:value="home.security" />
+
+        <activity android:name=".ui.registerFaceId.RegisterFaceIdFragment"/>
+        <activity android:name=".ui.loginWithFaceId.LoginWithFaceIdActivity"/>
 
 <!--        <activity-->
 <!--            android:name=".ui.main.MainActivity"-->
