--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,10 @@ dependencies {
     implementation "com.google.mlkit:face-detection:16.1.5"
     implementation("org.tensorflow:tensorflow-lite:2.4.0") { changing = true }
     implementation("org.greenrobot:eventbus:3.3.1")
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+//    implementation 'id.zelory:compressor:3.0.1'
+    implementation 'com.github.hkk595:Resizer:v1.5'
+
 //    implementation("org.tensorflow:tensorflow-lite-gpu:1.12.0") { changing = true }
 //    implementation("org.tensorflow:tensorflow-lite-support:1.12.0") { changing = true }
 }
